[Reverb] Replace username with bug ID.
PiperOrigin-RevId: 309379687
Change-Id: Iea982e1827861bc126deb24c60ccec724600e1b9

--- a/reverb/cc/distributions/BUILD
+++ b/reverb/cc/distributions/BUILD
@@ -6,7 +6,7 @@ load(
     "reverb_tf_deps",
 )
 
-package(default_visibility = ["//reverb:__subpackages__"])
+package(default_visibility = ["//visibility:public"])
 
 licenses(["notice"])
 
