--- a/reverb/BUILD
+++ b/reverb/BUILD
@@ -10,7 +10,7 @@ load(
     "reverb_pytype_strict_library",
 )
 
-package(default_visibility = [":__subpackages__"])
+package(default_visibility = ["//visibility:public"])
 
 licenses(["notice"])
 
