--- a/reverb/cc/platform/BUILD
+++ b/reverb/cc/platform/BUILD
@@ -9,7 +9,7 @@ load(
     "reverb_tf_deps",
 )
 
-package(default_visibility = ["//reverb:__subpackages__"])
+package(default_visibility = ["//visibility:public"])
 
 licenses(["notice"])
 
